Revert "Fix overlap of gem count over info by increasing the height"
This reverts commit 55b629e17f68baf1d80665db83b7987a9809dabf.

Changing the font size of 'downloads' instead

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -135,7 +135,7 @@ table {
 }
 
 .main .fold {
-  height: 85px;
+  height: 70px;
 }
 
 .main .fold .count {
